--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>Kilometers to Miles Converter</h1>
+    <label>Kilometers</label>
     <input type="number" id="kilometers" placeholder="Enter kilometers">
-    <button onclick="kilometersToMiles()">Convert to Miles</button>
+    <button class="button" onclick="kilometersToMiles()">Convert to Miles</button>
     <h3 id="result"></h3>
 </body>
 </html>
